# golazo

./: .env.example  .gitignore  .vercelignore  README.md  SUBMISSION.md  instrumentation.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts  vitest.server-only-stub.ts
anchor/: Anchor.toml  package-lock.json  package.json  tsconfig.json
anchor/programs/golazo_predict/: Cargo.toml
anchor/programs/golazo_predict/src/: lib.rs
anchor/programs/txline_mock/: Cargo.toml
anchor/programs/txline_mock/src/: lib.rs
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx
components/: BurnTracker.tsx  BurnsFeed.tsx  BuybackFeed.tsx  ChampionPrediction.tsx  ConfirmDialog.tsx  CopyAddress.tsx  Flag.tsx  GroupTable.tsx  Icon.tsx  IntroModal.tsx  LazyChart.tsx  LineupEditor.tsx  LivePanel.tsx  LocalTime.tsx  MatchBanner.tsx  MatchResultCard.tsx  MatchSelect.tsx  Select.tsx  ShareButtons.tsx  SiteFooter.tsx  SiteNav.tsx  SocialLinks.tsx  StatsCard.tsx  StatsStrip.tsx  TeamSelect.tsx  TokenLogo.tsx  TournamentBracket.tsx
constants/: schedule.ts  teams.ts  tokens.ts
hooks/: useBurns.ts  useBuybackHistory.ts  useFantasy.ts  useLiveMatches.ts  useMatchResults.ts  usePrediction.ts  usePredictionLeaderboard.ts  usePrizePool.ts  useTokenAddresses.ts  useTokenPrice.ts  useWeeklyPrize.ts
lib/: adminAuth.ts  broadcast.test.ts  broadcast.ts  burnToken.test.ts  burnToken.ts  burns.test.ts  burns.ts  buyback.ts  dexscreener.ts  errors.ts  espn.ts  fees.ts  (+50 more)
(+324 files in other folders)
