[package]
name = "golazo_predict"
version = "0.1.0"
description = "Golazo Markets: devnet YES/NO parimutuel settlement engine"
edition = "2021"
rust-version = "1.79.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "golazo_predict"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
txline_mock = { path = "../txline_mock", features = ["cpi"] }
